--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,17 @@
     "test": "test"
   },
   "scripts": {
+    "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "2.1.3",
     "graphql-yoga": "^1.18.3"
+  },
+  "devDependencies": {
+    "@prisma/cli": "2.1.3"
   }
 }
