--- a/stagewood-auth-system-backend/package.json
+++ b/stagewood-auth-system-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "stagewood-auth-system-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
