--- a/stagewood-auth-system-backend/package.json
+++ b/stagewood-auth-system-backend/package.json
@@ -15,9 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "2.1.3",
-    "graphql-yoga": "^1.18.3"
-  },
-  "devDependencies": {
+    "graphql-yoga": "^1.18.3",
     "@prisma/cli": "2.1.3"
   }
 }
