--- a/stagewood-auth-system-backend/package.json
+++ b/stagewood-auth-system-backend/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "node ./src/index.js",
+    "prisma": "prisma migrate up --experimental && prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
