--- a/stagewood-auth-system-backend/package.json
+++ b/stagewood-auth-system-backend/package.json
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/cli": "2.1.3",
     "@prisma/client": "2.1.3",
+    "bcryptjs": "^2.4.3",
     "graphql-yoga": "^1.18.3",
-    "@prisma/cli": "2.1.3"
+    "jsonwebtoken": "^8.5.1"
   }
 }
