--- a/stagewood-auth-system-backend/package.json
+++ b/stagewood-auth-system-backend/package.json
@@ -18,6 +18,7 @@
     "@prisma/cli": "2.1.3",
     "@prisma/client": "2.1.3",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1"
   }
