--- a/stagewood-auth-system-frontend/nginx.conf
+++ b/stagewood-auth-system-frontend/nginx.conf
@@ -42,25 +42,25 @@ server {
   #    deny  all;
   #}
 
-  #location ~* \.(?:manifest|appcache|html?|xml|json)$ {
-  #  expires -1;
-  #  # access_log logs/static.log;
-  #}
+  location ~* \.(?:manifest|appcache|html?|xml|json)$ {
+   expires -1;
+   # access_log logs/static.log;
+  }
 
-  #location ~* \.(?:css|js)$ {
-  #  try_files $uri =404;
-  #  expires 1y;
-  #  access_log off;
-  #  add_header Cache-Control "public";
-  #}
+  location ~* \.(?:css|js)$ {
+   try_files $uri =404;
+   expires 1y;
+   access_log off;
+   add_header Cache-Control "public";
+  }
 
-  ## Any route containing a file extension (e.g. /devicesfile.js)
-  #location ~ ^.+\..+$ {
-  #  try_files $uri =404;
-  #}
+  # Any route containing a file extension (e.g. /devicesfile.js)
+  location ~ ^.+\..+$ {
+   try_files $uri =404;
+  }
 
-  ## Any route that doesn't have a file extension (e.g. /devices)
-  #location / {
-  #    try_files $uri $uri/ /index.html;
-  #}
+  # Any route that doesn't have a file extension (e.g. /devices)
+  location / {
+     try_files $uri $uri/ /index.html;
+  }
 }
