--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     image: stagewood-auth-backend:latest
     environment:
       PRISMA_DS_URL: "mysql://stagewood-auth:SECRET@sw-db/stagewood-auth"
+      APP_SECRET: "Jazy-is-aw3some"
     ports:
       - "4000:4000"
     volumes:
@@ -17,6 +18,8 @@ services:
       context: ./stagewood-auth-system-frontend/
       dockerfile: ./frontend.dockerfile
     image: stagewood-auth-frontend:latest
+    environment:
+      REACT_APP_HTTP_LINK_URL: "http://localhost:4000"
     ports:
       - "3000:80"
 
