--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
     build:
       context: ./stagewood-auth-system-frontend/
       dockerfile: ./frontend.dockerfile
+      args:
+        REACT_APP_HTTP_LINK_URL: "http://localhost:4001"
     image: stagewood-auth-frontend:latest
-    environment:
-      REACT_APP_HTTP_LINK_URL: "http://localhost:4000"
     ports:
       - "3000:80"
 
